# computor_v1

./: .gitignore  CMakeLists.txt  Makefile  computor  main.cpp
computorv1/: computorv1.cpp  computorv1.h
polinom_parser/: polinom_parser.cpp  polinom_parser.h
polinom_solver/: polinom_solver.cpp  polinom_solver.h
polinomial/: polinomial.cpp  polinomial.h
tokenizer/: tokenizer.cpp  tokenizer.h
